toolchain/internal/core/analysis/testdata/errors/spreads/invalid_namespaced_spread.vdl
// @expect: E202

type Base {
  id string
}

type User {
  ...auth.Base
}
